Method invokes inefficient Boolean constructor (Dm) in NCBIBlastClient Changed to Boolean.valueOf(value)